--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
         </p>
         <button id="btnSortear">Sortear uma carta!</button>
         
+        <section id="cartaJogador"></section>
+        
         <section id="jogador">
-            <form id="atributos" class="hide">                
-                <input type="radio" name="atributo" value="forca">Força<span id="foca"></span><br/>
-                <input type="radio" name="atributo" value="inteligencia">Inteligência<span id="inteligencia"></span><br/>
-                <input type="radio" name="atributo" value="magia">Magia<span id="magia"></span><br/>
-                <button id="btnCombate" disabled="false">Combate!</button>                
-            </form>            
+          <form id="atributos" class="hide">
+            <input type="radio" name="atributo" value="forca">Força<span id="foca"></span><br/>
+            <input type="radio" name="atributo" value="inteligencia">Inteligência<span id="inteligencia"></span><br/>
+            <input type="radio" name="atributo" value="magia">Magia<span id="magia"></span><br/>
+            <button id="btnCombate">Combate!</button>
+          </form>          
         </section>
 
         <section id="computador" class="hide">
+
         </section>
 
         <section id="resultado">
