botao jogar novamente

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
       <section id="computador"></section>
 
-      <section id="resultado" class="hide">
-        <!-- <button id="btnJogarNovamente" onClick="window.location.reload()">Jogar novamente!</button> -->
+      <section id="resultado" class="hide"></section>
+        
+      <section>
+        <button id="btnJogarNovamente" class="hide" onClick="window.location.reload()">Jogar novamente!</button>
       </section>
     
     </article>
